@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.19 2005/04/18 17:49:41 drochner Exp $
+# $NetBSD: Makefile,v 1.20 2005/06/01 18:45:46 jmmv Exp $
 
 PKGNAME=	mencoder-${MPLAYER_PKG_VERSION}
 
@@ -23,8 +23,6 @@ do-install:
 	fi
 
 .include "../../multimedia/mplayer-share/Makefile.depends"
-
-.include "../../audio/lame/buildlink3.mk"
 
 .include "../../mk/bsd.pkg.mk"
 .include "../../multimedia/mplayer-share/Makefile.cflags"
